LOVE 0.6.2
----------

  * Fixed a bug in Image:setFilter where it would switch the parameters.
  * Fixed a bug in ImageRasterizer where it wasn't using the data.
  * Image filter and wrap modes now use string constants as well.
  * Fixed double-transform bug in SpriteBatch.
  * Errors are reported on stdout again.
  * Another fix for the icons on ubuntu.

LOVE 0.6.1
----------

  * Added Shape:setGroupIndex and getGroupIndex.
  * Added Body:setFixedRotation and Body:getFixedRotation.
  * Added Body:setInertia.
  * Added CircleShape:getLocalCenter and CircleShape:getWorldCenter.
  * Added icons and file associations for the debs.
  * Added the demos folder to the Mac OS X DMG.
  * It's now possible to run a .love from Resources in Mac OS X, thanks to Steve Johnson.
  * Fixed a bug with multiple Sources on the same Music.
  * Fixed a bug so the mouse doesn't get crippled when the keyboard is disabled.
  * Fixed a bug where love.graphics.rectangle drew a too large rectangle.
  * Fixed a bug where memory wouldn't be released correctly.
  * Fixed epic physics typo (getRestituion->getRestitution).
  * Fixed crash on opening non-existent image.
  * The error screen redraws when an event occurs.
  * The default love.run() now gracefully handles disabled modules.
  * The debian packages should now successfully include icons, file associations, etc, and should give the correct architecture.
  * Added support for drawing polylines to love.graphics.line - the syntax is the same as love.graphics.polygon.
  * Removed Music and Sound. There are now only sources.
  * Improved the stability of love.audio/love.sound.

LOVE 0.6.0
----------

  * Lost track of 0.6.0 changes a long while ago. Don't trust the list below.

  * Added love.graphics.print()/printf().
  * Added unicode-translated parameter to love.keypressed().
  * Added love.event.
  * Added love.filesystem.setIdentity().
  * Added OpenAL dependency.

  * Fixed love.fileystem problems with internal \0 in strings.